<resources>
    <string name="app_name">ChitChat</string>
    <string name="login_etPassword">Password</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etButton">Login</string>
    <string name="login_etCatchphrase">Like WhatsApp, but better…way better</string>
    <string name="login_et_toreg">Not registered?</string>
    <string name="login_et_reftoreg"><b><u>Click Here</u></b></string>
    <string name="et_Register_displayName">Display Name</string>
    <string name="et_Register_username">Username</string>
    <string name="et_Register_passwordConfirm">Confirm Password</string>
    <string name="et_Register_btn">Register</string>
    <string name="et_already_registered">Already registered?</string>
    <string name="et_toLogin"><b><u>Click here</u></b></string>
    <string name="contacts"><b>Chats</b></string>
    <string name="add_new_contact"><b>Add new contact</b></string>
    <string name="save_contact">Save contact</string>
    <string name="addNewCon_display_name">Display Name</string>
    <string name="addNewCon_server_id">Server ID</string>
    <string name="BaseUrl">http://10.0.2.2:5241/api/</string>
    <string name="apiFail">Server connection failed.</string>
    <string name="add_new_contact__id">Contact ID</string>
    <string name="add_new_contact__contact_server_name">Contact Server</string>
    <string name="add_new_contact__contact_btn_save">Save</string>
    <string name="login_error_msg">Wrong username or password</string>
    <string name="register_error_msg">Username already exists, please choose another one</string>
    <string name="register_pass_not_match">Passwords does not match</string>
</resources>