<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chitchat_bg"
    android:orientation="vertical"
    tools:context=".activities.LoginPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/chitchat_logo"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="59dp"
            android:layout_marginLeft="50sp"/>

        <EditText
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_etCatchphrase"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/add_new_contact__contact_id"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/add_new_contact__id"
            android:textColorHint="#C3C3C3"
            />

        <EditText
            android:id="@+id/add_new_contact__contact_display_name"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/add_new_contact__contact_display_name"
            android:textColorHint="#C3C3C3"
            />

        <EditText
            android:id="@+id/add_new_contact__contact_server_name"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/add_new_contact__contact_server_name"
            android:textColorHint="#C3C3C3"
            />

        <Button
            android:id="@+id/add_new_contact__btn_save_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/chitchat_btn"
            android:text="@string/add_new_contact__contact_btn_save"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>